Switched back to Hoxton after switching to ReactiveDiscoveryClient, still does not handle reloading services